--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "initial commit",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"  },
+    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/khadergw/Final-E-Commerce.git"
