--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/khadergw/Final-E-Commerce#readme",
   "dependencies": {
+    "axios": "^0.26.0",
     "express": "^4.17.3"
   },
   "devDependencies": {
